--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -147,7 +147,7 @@
 						
 					
 				<div class="col-md-12">
-					<h3> ☆ как со мной связаться</h3>
+					<h3> ☆ как со <a href = "anna9312323269-arch/lingdata/mywebpage/>мной</a> связаться</h3>
 <!-- тег <ul> - unordered list. Еще бывает тег <ol> -->
 					<ul>
 						<form action="https://t.me//Chiffaaa">
@@ -173,3 +173,4 @@
 	</body>
 
 </html>
+
