--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -3,7 +3,7 @@
 <html>
 
 
-
+<!--простите за неработающие марджини-педдинги, сил нет менять> </!-->
 	<head>
 		<title>личная страница Ани Николаевой ☆</title>
 	 	
@@ -147,17 +147,17 @@
 						
 					
 				<div class="col-md-12">
-					<h3> ☆ как со <a href = "https://github.com/anna9312323269-arch/lingdata/mywebpage/">мной</a> связаться</h3>
+					<h3> ☆ как со <a href = "https://anna9312323269-arch.github.io/lingdata/mywebpage/">мной</a> связаться</h3>
 <!-- тег <ul> - unordered list. Еще бывает тег <ol> -->
 					<ul>
 						<form action="https://t.me//Chiffaaa">
 							<input type="submit" value="telegram" />
 						</form>
 						<form action="https://guthib.com">
-							<input type="submit" value="мой гитхаб (честно)" />
+							<input type="submit" value="мой гитхаб (честно)" /> <!-- это сайт-прикол! без впна может не открыться, выдает you spelled it wrong:)></!-->
 						</form>
-						<button name="button" href = "">тык!</button>
-						<button type="button" class="btn btn-primary">еще тык!!</button>
+						<button name="button" href = "">тык!</button> <!-- эта кнопка не должна ничего делать, она для радости!!> </!-->
+						<button type="button" class="btn btn-primary">еще тык!!</button> <!--эта тоже></!-->
 					</ul>
 				</div>
 			</div>
@@ -173,5 +173,6 @@
 	</body>
 
 </html>
+
 
 
