--- a/mywebpage/index.html
+++ b/mywebpage/index.html
@@ -11,7 +11,7 @@
 	 	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel = 'stylesheet' href = "C:\Users\X270\Documents\me2.css">  
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="screen"> 
-		<meta name="description" content="Личная страница и контакты">
+		<meta name="description" content="личная страница и контакты">
 		
 	</head>
 	
@@ -173,6 +173,7 @@
 	</body>
 
 </html>
+
 
 
 
